[package]
name = "exporter-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "exporter_core"
path = "./src/lib.rs"

[[bin]]
name = "exporter_rs"
path = "./src/main.rs"


[dependencies]
chrono = "0.4.24"
notify = "5.1.0"
regex = "1.8.1"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
toml = "0.7.3"
kafka = "0.9"
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-native-tls","sqlx-macros","json", "time", "uuid"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0.71"
